--- a/references.bib
+++ b/references.bib
@@ -270,3 +270,16 @@ keywords = {Relational database, Database design, Normalisation, Join dependenci
   pages = {12},
   location = {Tampa, FL, USA}
 }
+
+@article{Silva2013,
+title = {Detecting and preventing error propagation via competitive learning},
+journal = {Neural Networks},
+volume = {41},
+pages = {70-84},
+year = {2013},
+note = {Special Issue on Autonomous Learning},
+issn = {0893-6080},
+doi = {https://doi.org/10.1016/j.neunet.2012.11.001},
+url = {https://www.sciencedirect.com/science/article/pii/S0893608012002778},
+author = {Thiago Christiano Silva and Liang Zhao},
+}
