--- a/ethics.tex
+++ b/ethics.tex
@@ -1,4 +1,4 @@
-\chapter{Ethical and legal issues}
+\chapter{Ethical, privacy and legal issues}
 
 \chapterprecishere{It's a trap!
   \par\raggedleft--- \textup{Admiral Ackbar}, Star Wars Episode VI: Return of the Jedi}
