--- a/planning.tex
+++ b/planning.tex
@@ -1,5 +1,6 @@
 \chapter{Experimental planning}
 \label{chap:planning}
+% TODO: change the chapter title to "Validation" or something similar
 
 \chapterprecishere{%
   All models are wrong, but some are useful.
