--- a/project.tex
+++ b/project.tex
@@ -358,3 +358,8 @@ our approach are described in the following sections.
     must be updated in real-time, websocket is more suitable.  If the user interface is
     used to submit batch requests, REST API is more suitable.
 \end{enumerate}
+
+\subsection{Solution search framework}
+
+TODO Move part of the \cref{chap:planning} here, dropping the sampling
+strategy but bringing the main defitions.
