--- a/inductive.tex
+++ b/inductive.tex
@@ -129,7 +129,7 @@ it is not
 addressed in the remaining of the book.
 
 \paragraph{Binary data classification task.}  In this task, the output $y$ take on
-only two possible values, zero or one, and the functions $f_\theta$ are indicator
+only two possible values, zero or one --- called classes ---, and the functions $f_\theta$ are indicator
 functions. For the loss
 \begin{equation*}
   \mathcal{L}(y, f_\theta(x)) = \begin{cases}
