--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 
 \usepackage{amsmath}
 \usepackage{mathtools}
+\usepackage{blkarray}
 \usepackage[colorlinks]{hyperref}
 \usepackage{fontspec}
 \usepackage{sourcesanspro}
