--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,7 @@
 
 \usepackage{tikz}
 \usetikzlibrary{shapes, arrows.meta, positioning, shapes.geometric}
+\usetikzlibrary {datavisualization.formats.functions}
 \usepackage{pgfplots}
 
 \tikzset{%
